<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zx_tv_equipment_code" />

        <TextView
            android:id="@+id/zx_tv_equipmentcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zx_tv_equipment_name" />

        <TextView
            android:id="@+id/zx_tv_equipmentname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zx_tv_equipment_category" />
    <TextView
        android:id="@+id/zx_tv_equipmenttype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
 </LinearLayout>
 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zx_tv_location" />
    <TextView
        android:id="@+id/zx_tv_placementposition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
 </LinearLayout>
  

</LinearLayout>