<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search1"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/search2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:hint="@string/search"
                android:textColor="@color/textcolor_login" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/search4" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/search3" />
    </LinearLayout>

    <com.zx.twocode.view.MyViewPager
        android:id="@+id/vp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/rg_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search6"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb1"
            style="@style/BottomTabStyle"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_tab_home_selector"
            android:text="@string/zx_rv_detailinfo" />

        <RadioButton
            android:id="@+id/rb2"
            style="@style/BottomTabStyle"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_tab_news_selector"
            android:text="@string/zx_rv_equipmentinfo" />

        <RadioButton
            android:id="@+id/rb3"
            style="@style/BottomTabStyle"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_tab_smart_selector"
            android:text="@string/zx_rv_documentinfo" />

        <RadioButton
            android:id="@+id/rb4"
            style="@style/BottomTabStyle"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_tab_gov_selector"
            android:text="@string/zx_rv_myinfo" />

        <RadioButton
            android:id="@+id/rb5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone" />
    </RadioGroup>

</LinearLayout>